# investai

./: .bandit  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .jumanjistyle.rb  .markdownlint.json  .mdlrc  .pre-commit-config.yaml  .pylintrc  .rsync_ignore  .rsync_ignore_code  .rsync_ignore_data  .rsync_include  CONTRIBUTING.md  Dockerfile  IDEAS_TODO.md  MATERIALS.md  README.md  TODO.md  TODOS.md  foo1.csv  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements1.txt  requirements_for_workflows.txt  requirements_venv_2.txt  setup.cfg  start.sh  test.sh
.circleci/: config.yml
.github/workflows/: config.yml  integrate.yml  pre-commit.yml  pytest.yml  python-test.yml  test_run.yml  tests.yml
.vim/: coc-settings.json
ai/: main.py
ai/core/: settings.py
ai/shared/: exitcode.py  types.py
ai_investing/: conftest.py  main.py
ai_investing/agent/: custom_drl_agent.py
ai_investing/common/: baseexitcode.py
core/: hyperparams.yaml
docs/: Makefile  fitthesis.cls  projekt-01-kapitoly-chapters-en.tex  projekt.tex  xlapes02.tex  xlapes02_appendices.tex  xlapes02_chapters.tex
experiments/: StockTradingEnv.py  Stock_Fundamental.ipynb
investai/: conftest.py
ml/: main.py
models/: mdp_stock_traiding_env_ai4finance.drawio
src/: __init__.py  ai_finance.py  conftest.py  data.ipynb  fundament.ipynb  main.py  requirements.txt
src/rl/: Agent.py  (+7 more)
thesis/: Makefile  fitthesis.cls  xlapes02-01-kapitoly-chapters-en.tex  xlapes02-01-kapitoly-chapters.tex  xlapes02-30-prilohy-appendices-en.tex  xlapes02-30-prilohy-appendices.tex  xlapes02.tex
(+421 files in other folders)
