[tool.bandit]
exclude_dirs = ["tests", "venv", "**conftest.py"]
targets = ['src']

[tool.poetry]
name = "ai-investing"
version = "0.1.0"
description = ""
authors = ["Zdeněk Lapeš <lapes.zdenek@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_investing"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
